--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -25,3 +25,13 @@
         align-self: center;
     }
 }
+
+.threeRowList {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-auto-flow: column;
+    grid-auto-columns: minmax(0, 0.27fr);
+    gap: 8px;
+    list-style-position: inside;
+    padding-left: 1rem;
+}
